static/css/loggedin.css
html,
body{
    margin: 0;
    padding: 0;
    height: 100%;
}
.wrapper{
    position: relative;
    min-height: 100%;
}
/*-----------------NAVBAR-----------------*/
.navbar-custom{
    background-color: rgb(74, 74, 79);
}
.nav.navbar {
    border: 0;
}

.nav-item {
    color: white;
}

.navbar-collapse {
    background-color: rgba(0, 0, 0, 0.45);
}

.navbar-dark .navbar-nav .nav-link{
    color: white;
}
.navbar-dark .navbar-nav .nav-link:hover{
    color: rgba(255, 255, 255, 0.5);
}
.logo {
    background: url("../img/logo.png") no-repeat;
    display: block;
    width: 150px;
    height: 75px;
}

.logo-white-orange {
    background: url("../img/logo_white_orange.png") no-repeat;
    display: block;
    width: 150px;
    height: 75px;
}
.navbar-collapse{
    background-color: transparent;
}

.navbar-nav{
    text-align: center;
}

/*-----------------ICONS-----------------*/
.fas{
    margin-right: 10px;
}

.fas.fa-bug{
    color: black;
}

.fas.fa-bug span {
    font-weight: 500;
    color: black;
    padding-left: 5px;
}

.fab {
    margin: 15px;
    margin-bottom: 15px;
    color: white;
}

.fas.fa-exclamation-circle{
    line-height: 1.5;
    margin: 0;
}
/*-----------------NEWS-----------------*/
.title{
    margin-bottom: 10px;
}

.news-footer{
    text-align: center;
    margin-top: 10px;
}

.no-decor,
.no-decor:hover,
.no-decor:focus
{
    text-decoration: none;
}

.no-decor h2{
    color: black;
}

.news-image{
    width:auto;
    max-height:225px;
}

.news-detail-image{
    width:500px;
    max-height:auto;
    margin: 0 10px;
}

.newdetail-content p{
    text-align: justify;
}

.btn-back{
    color: black;
    border-color: rgb(222, 226, 230);
    padding: 8px 16px;
    margin-left: 20px;
    margin-bottom: 10px;
    color: black;
    border: 1px solid #dee2e6;
}

.btn-back:hover{
    color: black;
    text-decoration: none;
    background-color: #e9ecef;
    border-color: #dee2e6;
}

/*-----------------BUGS-----------------*/
.bugs-button{
    background-color: #e54725;
    color: black;
}

.bugs-button:hover{
    background-color: #b7381d;;
    color: #BEBEBE;
}
#id_content,
#id_title{
    resize: none;
}

.panel-heading{
    font-size: 1.5rem;
    font-weight: 500;
    line-height: 1.2;
}

a.bug-link{
    color: black;
}

.bug-table {
    display: table;
    border: 1px solid black;
    border-color: rgb(209, 213, 218);
}

.table-row {
    display: table-row;
    border-bottom: 1px solid black;
    border-top: 1px solid black;
    border-color: rgb(209, 213, 218);
}
.table-row:hover {
   background: rgb(246, 248, 250);
}

.table-cell {
    display: table-cell;
    padding: 10px;
    border-bottom: 1px solid rgb(209, 213, 218);
}

.bug-first-row{
    background-color: rgb(246, 248, 250);
}

.image-and-submit-row {
    margin-top: 15px;
    margin-bottom: 15px;
}

/*-----------------PAGINATION------------*/
.page-nav{
    margin-top: 20px;
}

.pagination a {
  color: black;
  float: left;
  padding: 8px 16px;
  text-decoration: none;
}

.page-item.active .page-link {
    color: #fff;
    background-color: #e54725;
    border-color: transparent;
}

.page-link:hover {
    color: black;
    text-decoration: none;
    background-color: #e9ecef;
    border-color: #dee2e6;

}
/*-----------------FOOTER-----------------*/
.community-pages-footer{
    height: 50px;
	width: 100%;
	position: absolute;
	bottom: 0;
    background-color: rgb(74, 74, 79);
}

.community-pages-footer .d-flex{
    height: 35px;
}
.content{
    padding-bottom: 70px;
}

/*-------------COMMENTS------------*/
.comment-input {
     resize: none;
}

.img-circle {
    border-radius: 50%;
}

.comment-wrapper .panel-body {
    overflow:auto;
}

.comment-wrapper .media-list {
    list-style-type: none;
    margin: 0;
    padding: 0;
}

.thumbnail-img {
    width:75px;
    height:75px;
}

.comment-wrapper .media-list .media img {
    width:75px;
    height:75px;
    border:2px solid #e5e7e8;
}

.comment-wrapper .media-list .media {
    border-bottom:1px dashed #efefef;
    margin-bottom:25px;
}

.comment-wrapper .media-list .media-body{
    margin-left: 20px;
}
.comment-delete-btn{
    color: #FF0000;
}
.comment-delete-btn:hover{
    color: #990000;
}

.children-comment-delete-btn{
    color: #FF0000;
}
.children-comment-delete-btn:hover{
    color: #990000;
}
/*--------------------------------------*/
#id_password,
#id_images{
    display: none;
}
/*-------------MEDIA QUERIES------------*/
@media(min-width: 767px) {
    .title{
        margin-bottom: 30px;
    }
    .news-container{
        margin-top: 30px;
    }
    .newdetail-content{
        margin: 5px 10px;
    }
    .comment-container{
        padding-left: 15px;
    }
    .comment-wrapper .media-list {
        list-style-type: none;
    }
    .bug-wrapper{
        border: 1px solid;
        border-color: rgb(209, 213, 218);
    }
    .bug-reported-by{
        border-bottom: 1px solid;
        border-color: rgb(209, 213, 218);
    }
}

